[DOCFIX] Rename Building-Alluxio-Master-Branch to Building-Alluxio-From-Source (#7584)
* Rename Building-Alluxio-Master-Branch to Building-Alluxio-From-Source and update the reference to this page

* Remove unnecessary URL prefix

* Fix build and remove unsed includes